# toy_virtual_machine

./: CMakeLists.txt  README.md  main.cpp
conf/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  IConfigReader.h  TxtConfigReader.cpp  TxtConfigReader.h  config.txt
core/: BlockControl.cpp  BlockControl.h  CMakeLists.txt  CashMemory.cpp  CashMemory.h  CommandСounter.cpp  ControlBlock.h  InstructionExecutionBlock.cpp  InstructionExecutionBlock.h  InstructionExecutionBlocks.cpp  InstructionExecutionBlocks.h  InstructionSelectionBlock.cpp  InstructionSelectionBlock.h  Processor.cpp  Processor.h  ProcessorCore.cpp  ProcessorCore.h  RAMMemory.cpp  RAMMemory.h  Registers.cpp  Registers.h  ResultSavingBlock.cpp  ResultSavingBlock.h  Toy.cpp  Toy.h  TransactionPredictor.cpp  TransactionPredictor.h
log/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  ILoggerImpl.h  Logger.cpp  Logger.h
parser/: CMakeLists.txt  InstructionParser.cpp  InstructionParser.h
util/: CMakeLists.txt  CommonType.h  Util.h
